testsuite/poke.pkl/impl-diag-1.pk
/* { dg-do compile } */

var a
  = "foo" => 2; /* { dg-error "" } */
